--- a/src/portfolio_tracker/test.ipynb
+++ b/src/portfolio_tracker/test.ipynb
@@ -264,36 +264,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "6c87f0b3-331b-41e2-9a72-5d46ec8e176d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-20T10:47:39.825064Z",
-     "iopub.status.busy": "2025-11-20T10:47:39.824633Z",
-     "iopub.status.idle": "2025-11-20T10:47:39.842093Z",
-     "shell.execute_reply": "2025-11-20T10:47:39.841639Z",
-     "shell.execute_reply.started": "2025-11-20T10:47:39.825040Z"
-    }
+     "iopub.execute_input": "2025-11-22T17:18:08.183137Z",
+     "iopub.status.busy": "2025-11-22T17:18:08.182380Z",
+     "iopub.status.idle": "2025-11-22T17:18:09.137772Z",
+     "shell.execute_reply": "2025-11-22T17:18:09.137199Z",
+     "shell.execute_reply.started": "2025-11-22T17:18:08.183049Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Failed to get ticker 'AAPL' reason: Expecting value: line 1 column 1 (char 0)\n",
-      "[*********************100%%**********************]  1 of 1 completed\n",
-      "\n",
-      "1 Failed download:\n",
-      "['AAPL']: Exception('%ticker%: No timezone found, symbol may be delisted')\n"
+      "[*********************100%***********************]  1 of 1 completed"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [Open, High, Low, Close, Adj Close, Volume]\n",
-      "Index: []\n"
+      "Price            Close        High         Low        Open     Volume\n",
+      "Ticker            AAPL        AAPL        AAPL        AAPL       AAPL\n",
+      "Date                                                                 \n",
+      "2023-01-03  123.211197  128.954545  122.324571  128.343764  112117500\n",
+      "2023-01-04  124.482033  126.747853  123.221057  125.004155   89113600\n",
+      "2023-01-05  123.161957  125.871086  122.905826  125.240599   80962700\n",
+      "2023-01-06  127.693565  128.353606  123.033867  124.137225   87754700\n",
+      "2023-01-09  128.215714  131.427273  127.959583  128.530965   70790800\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
